--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/react-router-dom": "^5.1.7",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.5",
     "parcel-bundler": "^1.12.5",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
