--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.2",
-    "typescript": "^4.3.2"
-  },
-  "dependencies": {
+    "typescript": "^4.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
